[package]
name = "assert_cli"
version = "0.5.4"
description = "Test CLI Applications."
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/assert_cli.git"
homepage = "https://github.com/killercup/assert_cli"
documentation = "http://docs.rs/assert_cli/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "testing", "assert"]
build = "build.rs"

[dependencies]
colored = "1.5"
difference = "1.0"
error-chain = "0.11"
serde_json = "1.0"
environment = "0.1"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"

[badges]
travis-ci = { repository = "killercup/assert_cli" }
