[package]
name = "assert_cli"
version = "0.5.4"
description = "Test CLI Applications."
authors = ["Pascal Hertleif <killercup@gmail.com>", "Ed Page <eopage@byu.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/assert_cli.git"
homepage = "https://github.com/assert-rs/assert_cli"
documentation = "http://docs.rs/assert_cli/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "testing", "assert", "command-line-interface"]
build = "build.rs"

[[bin]]
name = "assert_fixture"

[features]
default = ["tempdir"]
tempdir = ["tempfile", "globwalk"]

[dependencies]
colored = "1.5"
difference = "2.0"
failure = "0.1"
failure_derive = "0.1"
serde_json = "1.0"
environment = "0.1"
predicates = "0.3"
tempfile = { version="3.0", optional=true }
globwalk = { version="0.1", optional=true }

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"

[badges]
travis-ci = { repository = "assert-rs/assert_cli" }
