[package]
name = "assert_cli"
version = "0.6.3"
description = "Test CLI Applications."
authors = ["Pascal Hertleif <killercup@gmail.com>", "Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/assert_cli.git"
homepage = "https://github.com/assert-rs/assert_cli"
documentation = "http://docs.rs/assert_cli/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "testing", "assert"]

[[bin]]
name = "assert_fixture"

[dependencies]
colored = "1.5"
difference = "2.0"
failure = "0.1"
failure_derive = "0.1"
serde_json = "1.0"
environment = "0.1"

[dev-dependencies]
docmatic = "0.1"

[badges]
travis-ci = { repository = "assert-rs/assert_cli" }
maintenance = { status = "deprecated" }
